
next:
	- CONFIG += splitdeps for case when package is not self-contained (e.g. Yocto)
	- sece: make sure valid=false is always caught as CodeServerLicenseInvalid
	- *ece: fix typo which caused congestion avoidance to be applied also to QCC
	- crypto: new requestFromAuth to set QNetworkRequest from libencloud::Auth
	- api: id and type are really optional and have proper defaults
	- config: autoretry and decongest can be modified via API (default false for QCC and true for *ECE)
	- [CONNECT-201] Add OS to HTTP User-Agent

libencloud 0.7.6 (28/01/2015)
	- setup: fix possible crashes upon error due to double delete;
	  also valid=false triggers license error
	- vpn: allow timeout=0 (no timer)
	- etc: default verbosity=7 for ECE/SECE
	- ece: fix compilation error in http/handler1.ccp;
	  handle PoI from cert CN (no longer required as separate file)
	  failures due to licensing yield automatic retries (unlike sece)
	- sece: fix compilation error in core (header not included)
	- *ece: congestion avoidance via random wait before startup
	- defaults: LIBENCLOUD_DATA_PREFIX is /var/lib/encloud if !LIBENCLOUD_ENDIAN
	- client: avoid errors when certificate verification is off
	- build: when building from sratch remove only files ignored by git
	  (so local files such as .qmake.pri are kept)

libencloud 0.7.5 (01/12/2014):
	- [CONNECT-188] Problems with fallback configuration

libencloud 0.7.4 (11/11/2014):
	- [CONNECT-178] Updates always available even if client is updated
	- [CONNECT-176] Error message gets stuck between states of the application
	- core: fix watchdog not being restarted upon reconnect

libencloud 0.7.3 (29/10/2014):
	- [CONNECT-169] Rename to Endian Connect App and Endian Connect Service
	- [CONNECT-149] Connect App sets up routes belonging to previous connection

libencloud 0.7.2 (15/10/2014):
	- [CONNECT-165] Tell OpenVPN not to cache passwords in memory
	- [CONNECT-152] Logging improvements and verbosity handling

libencloud 0.7.1 (17/09/2014):